@@ -86,6 +86,8 @@ Library
   :func:`tempfile.NamedTemporaryFile`, close the file descriptor if
   :func:`io.open` fails
 
+- Issue #21200: Return None from pkgutil.get_loader() when __spec__ is missing.
+
 - Issue #21013: Enhance ssl.create_default_context() when used for server side
   sockets to provide better security by default.
 
